DaemonSet/pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: myapp-first
  labels:
    app: myapp-first
spec:
  containers:
  - name: myapp
    image: nginx
    ports:
      - containerPort: 80
