DaemonSet/pod1.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: myapp-second
  labels:
    app: myapp-second 
spec:
  containers:
  - name: myapp
    image: nginx
    ports:
      - containerPort: 80
